Refaktor koda. Dodana Transactional anotacija u servisima. Maknuti konstruktori i dodana RequiredArgsConstructor anotacija. Preimenovao repository razrede u dao razrede